--- a/index.html
+++ b/index.html
@@ -3,46 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcolatrice</title>
+    <title>Calcolatrice con Bootstrap</title>
     <link rel="stylesheet" href="./assets/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <!-- <h1>Calcolatrice</h1> -->
-    <div class="calcolatrice">
-        <div id="display">
-            <div id="risultatoCalcolatrice">0</div>
-        </div>
-        <div class="row-one row">
-            <button id="clear">C</button>
-            <button value="/" class="operatore">/</button>
-        </div>
-        <div class="row-two row">
-            <button value="7" class="numero">7</button>
-            <button value="8" class="numero">8</button>
-            <button value="9" class="numero">9</button>
-            <button value="*" class="operatore">X</button>
+<body class="bg-dark text-light">
+    <div class="container py-5">
+        <div class="calcolatrice border border-2">
+            <div id="display">
+                <span id="risultatoCalcolatrice">0</span>
+            </div>
 
-        </div>
-        <div class="row-three row">
-            <button value="4" class="numero">4</button>
-            <button value="5" class="numero">5</button>
-            <button value="6" class="numero">6</button>
-            <button value="-" class="operatore">-</button>
-        </div>
-        <div class="row-four row">
-            <button value="1" class="numero">1</button>
-            <button value="2" class="numero">2</button>
-            <button value="3" class="numero">3</button>
-            <button value="+" class="operatore">+</button>
-        </div>
-        <div class="row-five row">
-        <button value="0" class="numero">0</button>
-        <button name="virgola" id="virgola" value=",">,</button>
-        <button value="=" id="uguale" class="operatore">=</button>
+            <div class="row g-2">
+
+            </div>
+
+            <div class="row g-2 mt-2">
+                <div class="col-6">
+                    <button id="onoff" class="btn btn-primary w-100">ON/OFF</button>
+                </div>
+                <div class="col-3 text-center">
+                    <button id="clear" class="btn btn-danger w-100">C</button>
+                </div>
+                <div class="col-3">
+                    <button value="/" class="btn btn-warning w-100 operatore">/</button>
+                </div>
+                <div class="col-3">
+                    <button value="7" class="btn btn-secondary w-100 numero">7</button>
+                </div>
+                <div class="col-3">
+                    <button value="8" class="btn btn-secondary w-100 numero">8</button>
+                </div>
+                <div class="col-3">
+                    <button value="9" class="btn btn-secondary w-100 numero">9</button>
+                </div>
+                <div class="col-3">
+                    <button value="*" class="btn btn-warning w-100 operatore">X</button>
+                </div>
+                <div class="col-3">
+                    <button value="4" class="btn btn-secondary w-100 numero">4</button>
+                </div>
+                <div class="col-3">
+                    <button value="5" class="btn btn-secondary w-100 numero">5</button>
+                </div>
+                <div class="col-3">
+                    <button value="6" class="btn btn-secondary w-100 numero">6</button>
+                </div>
+                <div class="col-3">
+                    <button value="-" class="btn btn-warning w-100 operatore">-</button>
+                </div>
+                <div class="col-3">
+                    <button value="1" class="btn btn-secondary w-100 numero">1</button>
+                </div>
+                <div class="col-3">
+                    <button value="2" class="btn btn-secondary w-100 numero">2</button>
+                </div>
+                <div class="col-3">
+                    <button value="3" class="btn btn-secondary w-100 numero">3</button>
+                </div>
+                <div class="col-3">
+                    <button value="+" class="btn btn-warning w-100 operatore">+</button>
+                </div>
+                <div class="col-6">
+                    <button value="0" class="btn btn-secondary w-100 numero">0</button>
+                </div>
+                <div class="col-3">
+                    <button id="virgola" value="," class="btn btn-secondary w-100">,</button>
+                </div>
+                <div class="col-3">
+                    <button value="=" id="uguale" class="btn btn-warning w-100 operatore">=</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    
     <script src="./assets/script.js"></script>
 </body>
 </html>
